@@ -43,7 +43,7 @@
     <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.1" transitive="false"/>
   
     <!-- transitive false turns off dependency checking, log4j deps seem borked -->
-    <dependency org="log4j" name="log4j" rev="1.2.15" transitive="false" conf="default"/>
+    <dependency org="log4j" name="log4j" rev="1.2.16" transitive="false" conf="default"/>
     <dependency org="jline" name="jline" rev="0.9.94" transitive="false" conf="default"/>
 
     <dependency org="org.jboss.netty" name="netty" conf="default" rev="3.2.2.Final">
